; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayout.c_ff_layout_write_prepare_v4.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayout.c_ff_layout_write_prepare_v4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_task = type { i32 }
%struct.nfs_pgio_header = type { %struct.TYPE_4__, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpc_task*, i8*)* @ff_layout_write_prepare_v4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ff_layout_write_prepare_v4(%struct.rpc_task* %0, i8* %1) #0 {
  %3 = alloca %struct.rpc_task*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.nfs_pgio_header*, align 8
  store %struct.rpc_task* %0, %struct.rpc_task** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.nfs_pgio_header*
  store %struct.nfs_pgio_header* %7, %struct.nfs_pgio_header** %5, align 8
  %8 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %5, align 8
  %9 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %5, align 8
  %12 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %5, align 8
  %15 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.rpc_task*, %struct.rpc_task** %3, align 8
  %18 = call i64 @nfs4_setup_sequence(i32 %10, i32* %13, i32* %16, %struct.rpc_task* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  br label %25

21:                                               ; preds = %2
  %22 = load %struct.rpc_task*, %struct.rpc_task** %3, align 8
  %23 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %5, align 8
  %24 = call i32 @ff_layout_write_prepare_common(%struct.rpc_task* %22, %struct.nfs_pgio_header* %23)
  br label %25

25:                                               ; preds = %21, %20
  ret void
}

declare dso_local i64 @nfs4_setup_sequence(i32, i32*, i32*, %struct.rpc_task*) #1

declare dso_local i32 @ff_layout_write_prepare_common(%struct.rpc_task*, %struct.nfs_pgio_header*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
